--- a/UpStart.MobileComponents/src/app/home/home.page.html
+++ b/UpStart.MobileComponents/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Component Showcase
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,48 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Component Showcase</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-list [inset]="true">
+    <ion-list-header>
+      <ion-label>Featured Components</ion-label>
+    </ion-list-header>
+
+    <ion-item button [routerLink]="['/feature1']" detail="true">
+      <ion-label>
+        <h2>Feature One</h2>
+        <p>Example component showcase</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item button [routerLink]="['/feature2']" detail="true">
+      <ion-label>
+        <h2>Feature Two</h2>
+        <p>Example component showcase</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item button [routerLink]="['/feature3']" detail="true">
+      <ion-label>
+        <h2>Feature Three</h2>
+        <p>Example component showcase</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item button [routerLink]="['/feature4']" detail="true">
+      <ion-label>
+        <h2>Feature Four</h2>
+        <p>Example component showcase</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item button [routerLink]="['/feature5']" detail="true">
+      <ion-label>
+        <h2>Feature Five</h2>
+        <p>Example component showcase</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
