Share sheet feature migration.

--- a/UpStart.MobileComponents/src/app/home/home.page.html
+++ b/UpStart.MobileComponents/src/app/home/home.page.html
@@ -18,10 +18,10 @@
       <ion-label>Featured Components</ion-label>
     </ion-list-header>
 
-    <ion-item button [routerLink]="['/feature1']" detail="true">
+    <ion-item button [routerLink]="['/share-sheet']" detail="true">
       <ion-label>
-        <h2>Feature One</h2>
-        <p>Example component showcase</p>
+        <h2>Share Sheet Integration</h2>
+        <p>Native share dialog with email & SMS support</p>
       </ion-label>
     </ion-item>
 
