UI and Date Widgets

--- a/UpStart.MobileComponents/src/app/home/home.page.html
+++ b/UpStart.MobileComponents/src/app/home/home.page.html
@@ -25,17 +25,17 @@
       </ion-label>
     </ion-item>
 
-    <ion-item button [routerLink]="['/feature2']" detail="true">
+    <ion-item button [routerLink]="['/widgets']" detail="true">
       <ion-label>
-        <h2>Feature Two</h2>
-        <p>Example component showcase</p>
+        <h2>Widgets</h2>
+        <p>Reusable UI components and widgets</p>
       </ion-label>
     </ion-item>
 
-    <ion-item button [routerLink]="['/feature3']" detail="true">
+    <ion-item button [routerLink]="['/date-widgets']" detail="true">
       <ion-label>
-        <h2>Feature Three</h2>
-        <p>Example component showcase</p>
+        <h2>Date Widgets</h2>
+        <p>Calendar and button bar components</p>
       </ion-label>
     </ion-item>
 
