RIch text editor.

--- a/UpStart.MobileComponents/src/app/app.component.html
+++ b/UpStart.MobileComponents/src/app/app.component.html
@@ -1,3 +1,6 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
+  
+  <!-- Global Floating Toolbar for Quill Editors -->
+  <app-quill-floating-toolbar></app-quill-floating-toolbar>
 </ion-app>
