--- a/UpStart.MobileComponents/src/app/home/home.page.html
+++ b/UpStart.MobileComponents/src/app/home/home.page.html
@@ -39,10 +39,10 @@
       </ion-label>
     </ion-item>
 
-    <ion-item button [routerLink]="['/feature4']" detail="true">
+    <ion-item button [routerLink]="['/rich-text-editor']" detail="true">
       <ion-label>
-        <h2>Feature Four</h2>
-        <p>Example component showcase</p>
+        <h2>Rich Text Editor</h2>
+        <p>Quill editor with floating mobile toolbar</p>
       </ion-label>
     </ion-item>
 
