--- a/UpStart.MobileComponents/src/app/widgets/widgets.page.html
+++ b/UpStart.MobileComponents/src/app/widgets/widgets.page.html
@@ -36,6 +36,13 @@
       </ion-label>
     </ion-item>
 
+    <ion-item button [routerLink]="['/widgets/avatar-picker']" detail="true">
+      <ion-label>
+        <h2>Avatar Picker Widget</h2>
+        <p>Scrollable avatar selector with 30 images</p>
+      </ion-label>
+    </ion-item>
+
     <ion-item button detail="true" disabled="true">
       <ion-label>
         <h2>Achievement Badge Widget</h2>
