MOved button bar. Added gamification system.

--- a/UpStart.MobileComponents/src/app/app.component.html
+++ b/UpStart.MobileComponents/src/app/app.component.html
@@ -3,4 +3,7 @@
   
   <!-- Global Floating Toolbar for Quill Editors -->
   <app-quill-floating-toolbar></app-quill-floating-toolbar>
+  
+  <!-- Global Coin Animation Component -->
+  <app-coin-animation></app-coin-animation>
 </ion-app>
