--- a/UpStart.MobileComponents/src/app/home/home.page.html
+++ b/UpStart.MobileComponents/src/app/home/home.page.html
@@ -46,6 +46,13 @@
       </ion-label>
     </ion-item>
 
+    <ion-item button [routerLink]="['/gamification']" detail="true">
+      <ion-label>
+        <h2>Gamification System</h2>
+        <p>Tiered celebration system with coin animations & confetti</p>
+      </ion-label>
+    </ion-item>
+
     <ion-item button [routerLink]="['/feature5']" detail="true">
       <ion-label>
         <h2>Feature Five</h2>
