--- a/UpStart.MobileComponents/src/app/widgets/button-bar/button-bar-demo.page.html
+++ b/UpStart.MobileComponents/src/app/widgets/button-bar/button-bar-demo.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/date-widgets"></ion-back-button>
+      <ion-back-button defaultHref="/widgets"></ion-back-button>
     </ion-buttons>
     <ion-title>Button Bar Widget</ion-title>
   </ion-toolbar>
