--- a/UpStart.MobileComponents/src/app/widgets/widgets.page.html
+++ b/UpStart.MobileComponents/src/app/widgets/widgets.page.html
@@ -43,6 +43,13 @@
       </ion-label>
     </ion-item>
 
+    <ion-item button [routerLink]="['/widgets/button-bar']" detail="true">
+      <ion-label>
+        <h2>Button Bar Widget</h2>
+        <p>Animated segmented control with sliding highlight</p>
+      </ion-label>
+    </ion-item>
+
     <ion-item button detail="true" disabled="true">
       <ion-label>
         <h2>Achievement Badge Widget</h2>
