PDF export functionality.

--- a/UpStart.MobileComponents/src/app/home/home.page.html
+++ b/UpStart.MobileComponents/src/app/home/home.page.html
@@ -53,10 +53,10 @@
       </ion-label>
     </ion-item>
 
-    <ion-item button [routerLink]="['/feature5']" detail="true">
+    <ion-item button [routerLink]="['/pdf-export']" detail="true">
       <ion-label>
-        <h2>Feature Five</h2>
-        <p>Example component showcase</p>
+        <h2>PDF Export</h2>
+        <p>Generate & share professional PDFs from HTML content</p>
       </ion-label>
     </ion-item>
   </ion-list>
