--- a/UpStart.MobileComponents/src/app/home/home.page.html
+++ b/UpStart.MobileComponents/src/app/home/home.page.html
@@ -59,5 +59,19 @@
         <p>Generate & share professional PDFs from HTML content</p>
       </ion-label>
     </ion-item>
+
+    <ion-item button [routerLink]="['/video-header']" detail="true">
+      <ion-label>
+        <h2>Video Header</h2>
+        <p>Fullscreen video background with scroll-triggered header transitions</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item button [routerLink]="['/sqlite-demo']" detail="true">
+      <ion-label>
+        <h2>SQLite Starter Kit</h2>
+        <p>Complete SQLite setup with CRUD operations & ToDo demo</p>
+      </ion-label>
+    </ion-item>
   </ion-list>
 </ion-content>
