--- a/UpStart.MobileComponents/src/app/widgets/widgets.page.html
+++ b/UpStart.MobileComponents/src/app/widgets/widgets.page.html
@@ -50,6 +50,13 @@
       </ion-label>
     </ion-item>
 
+    <ion-item button [routerLink]="['/widgets/tabs-fab']" detail="true">
+      <ion-label>
+        <h2>Tab Bar + FAB Widget</h2>
+        <p>Bottom tab navigation with centered quick action button</p>
+      </ion-label>
+    </ion-item>
+
     <ion-item button detail="true" disabled="true">
       <ion-label>
         <h2>Achievement Badge Widget</h2>
