--- a/UpStart.MobileComponents/src/app/form-widgets/form-widgets.page.html
+++ b/UpStart.MobileComponents/src/app/form-widgets/form-widgets.page.html
@@ -3,28 +3,28 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
-    <ion-title>Date Widgets</ion-title>
+    <ion-title>Form Widgets</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Date Widgets</ion-title>
+      <ion-title size="large">Form Widgets</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-list [inset]="true">
-    <ion-item button [routerLink]="['/date-widgets/calendar']" detail="true">
+    <ion-item button [routerLink]="['/form-widgets/color-picker']" detail="true">
       <ion-label>
-        <h2>Calendar</h2>
-        <p>Custom month/year calendar with date selection</p>
+        <h2>Color Picker</h2>
+        <p>Animated expandable color selector with smooth animations</p>
       </ion-label>
     </ion-item>
-    <ion-item button [routerLink]="['/date-widgets/date-scroller']" detail="true">
+    <ion-item button [routerLink]="['/form-widgets/weekday-picker']" detail="true">
       <ion-label>
-        <h2>Date Scroller</h2>
-        <p>Horizontal scrolling date picker with auto-center on today</p>
+        <h2>Weekday Picker</h2>
+        <p>Select days of the week with quick "Every day" shortcut</p>
       </ion-label>
     </ion-item>
   </ion-list>
