--- a/UpStart.MobileComponents/src/app/home/home.page.html
+++ b/UpStart.MobileComponents/src/app/home/home.page.html
@@ -39,6 +39,13 @@
       </ion-label>
     </ion-item>
 
+    <ion-item button [routerLink]="['/form-widgets']" detail="true">
+      <ion-label>
+        <h2>Form Widgets</h2>
+        <p>Color picker and weekday selector form controls</p>
+      </ion-label>
+    </ion-item>
+
     <ion-item button [routerLink]="['/rich-text-editor']" detail="true">
       <ion-label>
         <h2>Rich Text Editor</h2>
