Chart and number flipper widgets.

--- a/UpStart.MobileComponents/src/app/home/home.page.html
+++ b/UpStart.MobileComponents/src/app/home/home.page.html
@@ -46,6 +46,13 @@
       </ion-label>
     </ion-item>
 
+    <ion-item button [routerLink]="['/charts']" detail="true">
+      <ion-label>
+        <h2>Charts</h2>
+        <p>Interactive ECharts visualizations for data tracking</p>
+      </ion-label>
+    </ion-item>
+
     <ion-item button [routerLink]="['/rich-text-editor']" detail="true">
       <ion-label>
         <h2>Rich Text Editor</h2>
