--- a/UpStart.MobileComponents/src/app/widgets/widgets.page.html
+++ b/UpStart.MobileComponents/src/app/widgets/widgets.page.html
@@ -4,6 +4,11 @@
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
     <ion-title>Widgets</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="presentAboutModal()">
+        <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
