Share this app.

--- a/UpStart.MobileComponents/src/app/intro/intro.page.html
+++ b/UpStart.MobileComponents/src/app/intro/intro.page.html
@@ -42,6 +42,17 @@
       <ion-icon slot="end" name="arrow-forward-outline"></ion-icon>
     </ion-button>
 
+    <!-- Share Button -->
+    <ion-button 
+      expand="block" 
+      size="default"
+      fill="outline"
+      class="share-button"
+      (click)="shareApp()">
+      <ion-icon slot="start" name="share-outline"></ion-icon>
+      Share This App
+    </ion-button>
+
     <!-- Footer -->
     <div class="intro-footer">
       <p>Built with ❤️ by UpStart Productions</p>
