--- a/UpStart.MobileComponents/src/app/shared/modals/about-modal.component.html
+++ b/UpStart.MobileComponents/src/app/shared/modals/about-modal.component.html
@@ -65,6 +65,14 @@
         <p>View our open source work</p>
       </ion-label>
     </ion-item>
+
+    <ion-item button (click)="shareApp()" detail="true">
+      <ion-icon slot="start" name="share-outline" color="tertiary"></ion-icon>
+      <ion-label>
+        <h3>Share This App</h3>
+        <p>Tell others about UpStart Components</p>
+      </ion-label>
+    </ion-item>
   </ion-list>
 
   <!-- Footer -->
