--- a/UpStart.MobileComponents/src/app/rich-text-editor/rich-text-editor-demo.page.html
+++ b/UpStart.MobileComponents/src/app/rich-text-editor/rich-text-editor-demo.page.html
@@ -8,12 +8,6 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Rich Text Editor</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <!-- Introduction Card -->
   <ion-card>
     <ion-card-header>
@@ -86,11 +80,8 @@
 
   <!-- Features List -->
   <ion-card>
-    <ion-card-header>
-      <ion-card-title>Floating Toolbar Features</ion-card-title>
-    </ion-card-header>
     <ion-card-content>
-      <ion-list [inset]="true">
+      <ion-list>
         <ion-item>
           <ion-label class="ion-text-wrap">
             <h3>Text Formatting</h3>
