--- a/UpStart.MobileComponents/src/app/shared/modals/about-modal.component.html
+++ b/UpStart.MobileComponents/src/app/shared/modals/about-modal.component.html
@@ -12,9 +12,8 @@
 <ion-content class="ion-padding">
   <!-- Intro Text Section -->
   <div class="intro-section">
-    <div class="logo-placeholder-small">
-      <span class="logo-text">UpStart</span>
-      <span class="logo-subtext">PRODUCTIONS</span>
+    <div class="logo-container-small">
+      <img src="assets/branding/logo-upstart-small.svg" alt="UpStart Productions" class="upstart-logo-small">
     </div>
     
     <p class="about-text">
