--- a/UpStart.MobileComponents/src/app/widgets/button-bar/button-bar-demo.page.html
+++ b/UpStart.MobileComponents/src/app/widgets/button-bar/button-bar-demo.page.html
@@ -3,17 +3,11 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/widgets"></ion-back-button>
     </ion-buttons>
-    <ion-title>Button Bar Widget</ion-title>
+    <ion-title>Button Bar</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Button Bar Widget</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <!-- Introduction Card -->
   <ion-card>
     <ion-card-header>
@@ -133,9 +127,6 @@
 
   <!-- Features List -->
   <ion-card>
-    <ion-card-header>
-      <ion-card-title>Widget Features</ion-card-title>
-    </ion-card-header>
     <ion-card-content>
       <ion-list [inset]="true">
         <ion-item>
