--- a/UpStart.MobileComponents/src/app/widgets/number-flipper/number-flipper-demo.page.html
+++ b/UpStart.MobileComponents/src/app/widgets/number-flipper/number-flipper-demo.page.html
@@ -3,17 +3,11 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/widgets"></ion-back-button>
     </ion-buttons>
-    <ion-title>Number Flipper Widget</ion-title>
+    <ion-title>Number Flipper</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Number Flipper</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <!-- Introduction Card -->
   <ion-card>
     <ion-card-header>
@@ -139,11 +133,8 @@
 
   <!-- Features List -->
   <ion-card>
-    <ion-card-header>
-      <ion-card-title>Widget Features</ion-card-title>
-    </ion-card-header>
     <ion-card-content>
-      <ion-list [inset]="true">
+      <ion-list>
         <ion-item>
           <ion-label class="ion-text-wrap">
             <h3>Smooth Digit Animation</h3>
