--- a/UpStart.MobileComponents/src/app/widgets/progress-ring/progress-ring-demo.page.html
+++ b/UpStart.MobileComponents/src/app/widgets/progress-ring/progress-ring-demo.page.html
@@ -3,17 +3,11 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/widgets"></ion-back-button>
     </ion-buttons>
-    <ion-title>Progress Ring Widget</ion-title>
+    <ion-title>Progress Ring</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Progress Ring Widget</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <!-- Introduction Card -->
   <ion-card>
     <ion-card-header>
@@ -309,9 +303,6 @@
 
   <!-- Features List -->
   <ion-card>
-    <ion-card-header>
-      <ion-card-title>Widget Features</ion-card-title>
-    </ion-card-header>
     <ion-card-content>
       <ion-item>
         <ion-label class="ion-text-wrap">
