--- a/UpStart.MobileComponents/src/app/widgets/tabs-fab/tabs-fab-demo.page.html
+++ b/UpStart.MobileComponents/src/app/widgets/tabs-fab/tabs-fab-demo.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/widgets"></ion-back-button>
     </ion-buttons>
-    <ion-title>Tabs + FAB Widget</ion-title>
+    <ion-title>Tabs + FAB Button</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,9 +11,6 @@
   <div class="page-content">
     <!-- Demo Info -->
     <ion-card>
-      <ion-card-header>
-        <ion-card-title>Tab Bar + Centered FAB</ion-card-title>
-      </ion-card-header>
       <ion-card-content>
         <h3>Features Demonstrated:</h3>
         <ul>
