--- a/UpStart.MobileComponents/src/app/home/home.page.html
+++ b/UpStart.MobileComponents/src/app/home/home.page.html
@@ -4,7 +4,7 @@
       <ion-back-button defaultHref="/intro"></ion-back-button>
     </ion-buttons>
     <ion-title>
-      Component Showcase
+      Ionic Components
     </ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="presentAboutModal()">
@@ -15,17 +15,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Component Showcase</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <ion-list [inset]="true">
-    <ion-list-header>
-      <ion-label>Featured Components</ion-label>
-    </ion-list-header>
-
     <ion-item button [routerLink]="['/share-sheet']" detail="true">
       <ion-label>
         <h2>Share Sheet Integration</h2>
@@ -35,22 +25,22 @@
 
     <ion-item button [routerLink]="['/widgets']" detail="true">
       <ion-label>
-        <h2>Widgets</h2>
+        <h2>UI Components</h2>
         <p>Reusable UI components and widgets</p>
       </ion-label>
     </ion-item>
 
     <ion-item button [routerLink]="['/date-widgets']" detail="true">
       <ion-label>
-        <h2>Date Widgets</h2>
-        <p>Calendar and button bar components</p>
+        <h2>Date Components</h2>
+        <p>All sorts of date pickers</p>
       </ion-label>
     </ion-item>
 
     <ion-item button [routerLink]="['/form-widgets']" detail="true">
       <ion-label>
-        <h2>Form Widgets</h2>
-        <p>Color picker and weekday selector form controls</p>
+        <h2>Form Components</h2>
+        <p>Coo, input controls</p>
       </ion-label>
     </ion-item>
 
