--- a/UpStart.MobileComponents/src/app/intro/intro.page.html
+++ b/UpStart.MobileComponents/src/app/intro/intro.page.html
@@ -2,14 +2,14 @@
   <div class="intro-container">
     <!-- Logo Placeholder -->
     <div class="logo-container">
-      <div class="logo-placeholder">
-        <span class="logo-text">UpStart</span>
-        <span class="logo-subtext">PRODUCTIONS</span>
-      </div>
+        <!-- UpStart Productions Logo -->
+        <div class="logo-container">
+          <img src="assets/branding/logo-upstart-large.svg" alt="UpStart Productions" class="upstart-logo-large">
+        </div>
     </div>
 
     <!-- Title -->
-    <h1 class="intro-title">Mobile Components</h1>
+    <h1 class="intro-title">Ionic Components</h1>
 
     <!-- Description -->
     <p class="intro-description">
@@ -52,11 +52,6 @@
       <ion-icon slot="start" name="share-outline"></ion-icon>
       Share This App
     </ion-button>
-
-    <!-- Footer -->
-    <div class="intro-footer">
-      <p>Built with ❤️ by UpStart Productions</p>
-    </div>
   </div>
 </ion-content>
 
