--- a/UpStart.MobileComponents/src/app/form-widgets/weekday-picker/weekday-picker-demo.page.html
+++ b/UpStart.MobileComponents/src/app/form-widgets/weekday-picker/weekday-picker-demo.page.html
@@ -3,17 +3,11 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/form-widgets"></ion-back-button>
     </ion-buttons>
-    <ion-title>Weekday Picker Widget</ion-title>
+    <ion-title>Weekday Picker</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Weekday Picker</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <!-- Introduction Card -->
   <ion-card>
     <ion-card-header>
@@ -141,11 +135,8 @@
 
   <!-- Features List -->
   <ion-card>
-    <ion-card-header>
-      <ion-card-title>Widget Features</ion-card-title>
-    </ion-card-header>
     <ion-card-content>
-      <ion-list [inset]="true">
+      <ion-list>
         <ion-item>
           <ion-label class="ion-text-wrap">
             <h3>Individual Day Toggles</h3>
