--- a/UpStart.MobileComponents/src/app/shared/modals/about-modal.component.html
+++ b/UpStart.MobileComponents/src/app/shared/modals/about-modal.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>About UpStart Productions</ion-title>
+    <ion-title>UpStart Productions</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="dismiss()">
         <ion-icon slot="icon-only" name="close-outline"></ion-icon>
@@ -17,8 +17,8 @@
     </div>
     
     <p class="about-text">
-      UpStart Productions specializes in building beautiful, user-friendly mobile applications 
-      with cutting-edge technology. This showcase demonstrates our reusable component library, 
+      UpStart Productions specializes in building user-friendly web and mobile applications 
+      to suppoort human well-being. This showcase demonstrates our reusable Ionic component library, 
       battle-tested in production apps and ready to accelerate your next project.
     </p>
   </div>
@@ -29,7 +29,7 @@
       <ion-icon slot="start" name="mail-outline" color="primary"></ion-icon>
       <ion-label>
         <h3>Email</h3>
-        <p>contact@upstartproductions.com</p>
+        <p>hello@heyupstart.com</p>
       </ion-label>
     </ion-item>
 
@@ -37,7 +37,7 @@
       <ion-icon slot="start" name="globe-outline" color="secondary"></ion-icon>
       <ion-label>
         <h3>Website</h3>
-        <p>www.upstartproductions.com</p>
+        <p>heyupstart.com</p>
       </ion-label>
     </ion-item>
 
@@ -49,6 +49,7 @@
       </ion-label>
     </ion-item>
 
+    <!--
     <ion-item button (click)="openTwitter()" detail="true">
       <ion-icon slot="start" name="logo-twitter" color="tertiary"></ion-icon>
       <ion-label>
@@ -56,6 +57,7 @@
         <p>Follow for updates</p>
       </ion-label>
     </ion-item>
+    -->
 
     <ion-item button (click)="openGitHub()" detail="true">
       <ion-icon slot="start" name="logo-github" color="dark"></ion-icon>
@@ -69,7 +71,7 @@
       <ion-icon slot="start" name="share-outline" color="tertiary"></ion-icon>
       <ion-label>
         <h3>Share This App</h3>
-        <p>Tell others about UpStart Components</p>
+        <p>Tell others about UpStart Ionic Components</p>
       </ion-label>
     </ion-item>
   </ion-list>
