--- a/UpStart.MobileComponents/src/app/widgets/avatar-picker/avatar-picker-demo.page.html
+++ b/UpStart.MobileComponents/src/app/widgets/avatar-picker/avatar-picker-demo.page.html
@@ -80,7 +80,7 @@
   <!-- Features List -->
   <ion-card>
     <ion-card-content>
-      <ion-list [inset]="true">
+      <ion-list>
         <ion-item>
           <ion-label class="ion-text-wrap">
             <h3>30 Unique Avatars</h3>
