--- a/UpStart.MobileComponents/src/app/charts/progress-line-chart/progress-line-chart-demo.page.scss
+++ b/UpStart.MobileComponents/src/app/charts/progress-line-chart/progress-line-chart-demo.page.scss
@@ -4,6 +4,11 @@ ion-content {
   height: 53vh;
 }
 
+ion-card-title {
+  font-size: 18px;
+  font-weight: 600;
+}
+
 .chart-container {
   background-color: #fff;
   padding-bottom: 3px;
