--- a/UpStart.MobileComponents/src/app/date-widgets/date-widgets.page.html
+++ b/UpStart.MobileComponents/src/app/date-widgets/date-widgets.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
-    <ion-title>Date Widgets</ion-title>
+    <ion-title>Date Components</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="presentAboutModal()">
         <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
@@ -13,12 +13,6 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Date Widgets</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <ion-list [inset]="true">
     <ion-item button [routerLink]="['/date-widgets/calendar']" detail="true">
       <ion-label>
