--- a/UpStart.MobileComponents/src/app/form-widgets/color-picker/color-picker-demo.page.scss
+++ b/UpStart.MobileComponents/src/app/form-widgets/color-picker/color-picker-demo.page.scss
@@ -59,6 +59,11 @@ ion-chip {
   margin: 4px 4px 4px 0;
 }
 
+ion-card-title {
+  font-size: 18px;
+  font-weight: 600;
+}
+
 code {
   background-color: var(--ion-color-light);
   padding: 2px 6px;
